--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
 
 
         for (var a = 0; a < 10; a++) {
-            alert(a)
-            if (a == 4) {
+            alert(a);
+            if (a === 4) {
                 alert("llegue")
             } 
         }
+
+        console.log("hola!!!")
 
     </script>
 
