juego casi completo, con niveles

--- a/principal.html
+++ b/principal.html
@@ -20,34 +20,34 @@
         <br>
         <div class="grid">
             <!-- contenedor -->
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/1.png" alt="carta1">
             </div>
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/3.png" alt="carta1">
             </div>
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/2.png" alt="carta1">
             </div>
 
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/4.png" alt="carta1">
             </div>
 
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/4.png" alt="carta1">
             </div>
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/3.png" alt="carta1">
             </div>
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/2.png" alt="carta1">
             </div>
 
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/1.png" alt="carta1">
             </div>
-            <div class="a">
+            <div class="pokemon">
                 <img src="imagenes/base.png" alt="carta1">
             </div>
 
