--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
         <button id="iniciar">Iniciar!!</button>
     </div>
     <div>
-        <div class="grid nivel1">
+        <div class="grid nivel2">
         </div>
     </div>
 </div>
@@ -36,6 +36,46 @@
 <script>
 
     var imagenes = [
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
+        "imagenes/1.png",
+        "imagenes/2.png",
+        "imagenes/3.png",
+        "imagenes/4.png",
         "imagenes/1.png",
         "imagenes/2.png",
         "imagenes/3.png",
