--- a/index2.html
+++ b/index2.html
@@ -22,6 +22,9 @@
         <img id="pokemon-objetivo" src="imagenes/base.png">
     </iv>
     <div>
+        <span id="conteo">-</span>
+    </div>
+    <div>
         <button id="iniciar">Iniciar!!</button>
     </div>
     <div>
