--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     </div>
 
     <br>
-    <iv>
-        <img id="pokemon-objetivo" src="imagenes/base.png">
-    </iv>
+
     <div>
         <span id="conteo">-</span>
     </div>
@@ -29,6 +27,9 @@
     </div>
     <div>
         <div class="grid nivel1">
+        </div>
+        <div>
+            <img id="pokemon-objetivo" src="imagenes/base.png">
         </div>
     </div>
 </div>
