--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
 </div>
 <script src="js/jquery-3.4.1.js"></script>
 <script src="js/juego.js"></script>
-
-
 <script>
 
+    // array imagenes, se puede llamar pepito
     var imagenes = [
         "imagenes/1.png",
         "imagenes/2.png",
@@ -62,7 +61,8 @@
         "imagenes/4.png",
     ];
 
-    prepararJuego(imagenes)
+    // aca arranca todo!!!
+    iniciarJuego(imagenes)
 
 </script>
 
