--- a/index2.html
+++ b/index2.html
@@ -14,13 +14,12 @@
 <div class="contenedor">
     <div class="cabecera">
         <h1>MEMOTEST</h1>
-        <p>Hay imagenes iguales, encontralas!</p>
     </div>
 
     <br>
-    <iv>
+    <div>
         <img id="pokemon-objetivo" src="imagenes/base.png">
-    </iv>
+    </div>
     <div>
         <span id="conteo">-</span>
     </div>
@@ -95,14 +94,11 @@
         "imagenes/2.png",
         "imagenes/3.png",
         "imagenes/4.png",
-        "imagenes/1.png",
-        "imagenes/2.png",
-        "imagenes/3.png",
-        "imagenes/4.png",
+
     ];
 
     iniciarJuego(imagenes)
-
+var nivel = 2;
 </script>
 
 
